# flora_SAM

./: .gitattributes  .gitignore  EXPORTS.md  README.md  color_analysis.py  colorapproach.md  export_colors.py  extract_color_features.py  flora_meta.xlsx  generate_plant_colors_json.py  generate_thumbnails.py  plant_visualization.py  prepare_data.py  pyproject.toml  sam_batch_interactive.py  serve_visualizations.py  thumbnail_cache.py  visualize_colors.py
docs/plans/: 2026-01-21-color-features-design.md  2026-01-21-plant-umap-visualization-design.md  2026-01-21-streamlit-app-design.md  2026-01-27-home-page-search-redesign.md
embeddings_cache/: cluster_assignments.npz  umap_projections.npz
streamlit_app/: .gitignore  Home.py  README.md  SETUP_LFS.md  app.py
streamlit_app/.streamlit/: config.toml  pages.toml
streamlit_app/data/: cluster_assignments.csv  comparison_metrics.json  flora_batava_index.csv  plants_metadata.csv
streamlit_app/pages/: 1_Browse_by_Taxonomy.py  2_Visual_Clusters.py  3_Color_Analysis.py  4_Plant_Detail.py
streamlit_app/utils/: charts.py  color_utils.py  data_loader.py
visualizations/: cluster_analysis.json  color_features.csv  family_dispersion.csv  family_distances.csv  genus_dispersion.csv  taxonomic_summary.csv
visualizations/cluster_data/: cluster_analysis.json  cluster_data_clip.json  cluster_data_combined.json  cluster_data_dinov2.json  cluster_data_plantnet.json  cluster_stats.json
